[project]
name = "sigill"
version = "0.0.1"
description = "An experimental service for computing metrics"
readme = "README.md"
authors = [{name = "Beto Dealmeida"}]
license = {text = "MIT"}
classifiers = [
    "License :: OSI Approved :: MIT License"
]
dependencies = [
    "sqlglot",
]
requires-python = ">3.7"
scripts = {sigill= "sigill.cli:run"}

[project.urls]
homepage = "https://github.com/datajunction/sigill"
Changelog = "https://github.com/datajunction/sigill/releases"
Issues = "https://github.com/datajunction/sigill/issues"
CI = "https://github.com/datajunction/sigill/actions"

[project.optional-dependencies]
test = ["pytest"]
